--- a/app/src/main/res/layout/add_exercise_list_2.xml
+++ b/app/src/main/res/layout/add_exercise_list_2.xml
@@ -7,22 +7,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddWorkout2">
 
-    <EditText
-        android:id="@+id/txtname"
+    <TextView
+        android:id='@+id/text_search'
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="15dp"
+        android:hint="Select Exercise"
+        android:textSize="20sp"
+        android:textColorHint="@color/gray"
+        android:textColor="@color/white"
         android:gravity="start|bottom"
         android:layout_gravity="bottom"
-        android:fontFamily="@font/mlight"
-        android:background="@color/trans"
-        android:textColorHint="@color/gray"
-        android:hint="Exercise Name"
-        android:autofillHints="Exercise Name"
-        android:textColor="@color/gray"
-        android:textSize="17sp" />
+        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
+        android:background="@color/trans"/>
+
 
     <TextView
         android:id="@+id/txtadditional"
