a lot of work has been done

--- a/app/src/main/res/layout/activity_add_workout2.xml
+++ b/app/src/main/res/layout/activity_add_workout2.xml
@@ -21,10 +21,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trans"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginLeft="30dp"
+                android:src="@drawable/ic_baseline_arrow_back_24"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="1"/>
+                android:layout_weight="1.2"/>
+
             <TextView
                 android:id="@+id/title_tv"
                 android:layout_width="wrap_content"
