--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -6,6 +6,22 @@
     android:background="@drawable/gradient1"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/trans"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginLeft="22dp"
+        android:src="@drawable/ic_baseline_arrow_back_24"/>
 
     <TextView
         android:id="@+id/title_list"
@@ -19,6 +35,8 @@
         android:textColor="@color/white"
         android:gravity="center"
         android:fontFamily="@font/mmedium"/>
+
+        </LinearLayout>
 
     <SearchView
         android:id="@+id/workout_search"
