--- a/app/src/main/res/layout/add_exercise_list.xml
+++ b/app/src/main/res/layout/add_exercise_list.xml
@@ -28,18 +28,18 @@
         android:id="@+id/txttime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/btnaddwork"
-        android:fontFamily="@font/mmedium"
+        android:layout_gravity="bottom"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
-        android:gravity="center|bottom"
-        android:layout_gravity="bottom"
-        android:textColor="@color/white"
+        android:layout_toLeftOf="@+id/btnaddwork"
         android:background="@color/trans"
-        android:textSize="15sp"
+        android:fontFamily="@font/mmedium"
+        android:gravity="center|bottom"
+        android:inputType="number"
         android:text="Work:"
-        android:inputType="number"/>
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
     <EditText
         android:id="@+id/btnaddwork"
