--- a/app/src/main/res/layout/add_exercise_list_2.xml
+++ b/app/src/main/res/layout/add_exercise_list_2.xml
@@ -28,17 +28,17 @@
         android:id="@+id/txtadditional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/btnaddwork"
-        android:fontFamily="@font/mmedium"
+        android:layout_gravity="bottom"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
-        android:gravity="center|bottom"
-        android:layout_gravity="bottom"
-        android:textColor="@color/white"
+        android:layout_toLeftOf="@+id/btnaddwork"
         android:background="@color/trans"
-        android:textSize="15sp"
-        android:text="text"/>
+        android:fontFamily="@font/mmedium"
+        android:gravity="center|bottom"
+        android:text="text"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
 
     <EditText
@@ -116,14 +116,14 @@
         android:id="@+id/btndeleteexercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/trans"
-        android:src="@drawable/ic_baseline_remove_circle_outline_24"
-        android:gravity="center|bottom"
-        android:layout_gravity="bottom"
-        android:onClick="deleteExerciseFromList"
         android:layout_alignParentRight="true"
+        android:layout_gravity="bottom"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"/>
+        android:layout_marginRight="5dp"
+        android:background="@color/trans"
+        android:gravity="center|bottom"
+        android:onClick="deleteExerciseFromList"
+        android:src="@drawable/ic_baseline_remove_circle_outline_24" />
 
 </RelativeLayout>
