--- a/app/src/main/res/layout/add_exercise_list_2.xml
+++ b/app/src/main/res/layout/add_exercise_list_2.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:layout_marginTop="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AddWorkout2">
+    tools:context=".AddWorkoutActivity">
 
     <TextView
         android:id='@+id/text_search'
