--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -36,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Daily workout"
+            android:lineSpacingExtra="5dp"
             android:textSize="20sp"
             android:layout_marginTop="30dp"
             android:layout_gravity="center"
