--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
 
     <ImageView
         android:id='@+id/picstatistics'
-        android:layout_width="280dp"
-        android:layout_height="280dp"
+        android:layout_width="280sp"
+        android:layout_height="280sp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="10sp"
         android:gravity="center"
         android:src="@drawable/home_img_small"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,14 +26,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30sp"
+        android:layout_marginRight="30sp"
+        android:layout_marginEnd="30sp"
+        android:layout_marginStart="30sp"
+        android:layout_marginTop="20sp"
         android:fontFamily="@font/mlight"
         android:gravity="center"
-        android:lineSpacingExtra="8dp"
+        android:lineSpacingExtra="8sp"
         android:text="@string/title_string"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -49,10 +49,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="280sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
         android:fontFamily="@font/mlight"
         android:gravity="center"
-        android:lineSpacingExtra="8dp"
+        android:lineSpacingExtra="4sp"
         android:text="@string/subtitle_string"
         android:textAlignment="center"
         android:textColor="#C0C0C0"
@@ -75,13 +77,13 @@
         <TextView
             android:id="@+id/btexercise"
             android:layout_width="0dp"
-            android:layout_height="55dp"
+            android:layout_height="55sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginStart="2dp"
+            android:layout_marginBottom="2sp"
+            android:layout_marginEnd="2sp"
+            android:layout_marginRight="2sp"
+            android:layout_marginLeft="2sp"
+            android:layout_marginStart="2sp"
             android:background="@color/white"
             android:fontFamily="@font/mmedium"
             android:gravity="center"
@@ -99,13 +101,13 @@
             android:id="@+id/btrandom"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="55dp"
+            android:layout_height="55sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="2dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2sp"
+            android:layout_marginStart="2sp"
+            android:layout_marginBottom="2sp"
+            android:layout_marginEnd="2sp"
+            android:layout_marginRight="2sp"
             android:background="@color/white"
             android:fontFamily="@font/mmedium"
             android:gravity="center"
@@ -126,7 +128,7 @@
         android:background="@color/trans"
         android:onClick="populateDatabase"
         android:src="@drawable/ic_baseline_dns_24"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button_layout"/>
@@ -137,7 +139,7 @@
         android:layout_height="wrap_content"
         android:background="@color/trans"
         android:src="@drawable/ic_menu_delete"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnloaddatabase"
         app:layout_constraintBottom_toTopOf="@+id/button_layout"/>
@@ -146,7 +148,7 @@
         android:id="@+id/buttonaddworkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="60sp"
         android:background="@color/trans"
         android:src="@drawable/ic_baseline_library_add_24"
         app:layout_constraintEnd_toStartOf="@+id/btnloaddatabase"
@@ -157,8 +159,8 @@
         android:id="@+id/buttonwrite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="2sp"
+        android:layout_marginTop="10sp"
         android:background="@color/trans"
         android:src="@drawable/ic_menu_upload"
         android:onClick="writeDataBase"
@@ -170,8 +172,8 @@
         android:id="@+id/buttonread"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20sp"
+        android:layout_marginTop="10sp"
         android:background="@color/trans"
         android:src="@drawable/ic_baseline_unarchive_24"
         android:onClick="readDataBase"
@@ -183,8 +185,8 @@
         android:id="@+id/buttoncalendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20sp"
+        android:layout_marginTop="10sp"
         android:background="@color/trans"
         android:src="@drawable/ic_baseline_calendar_today_24"
         android:onClick="openCalendar"
