--- a/app/src/main/res/layout/dialog_searchable_spinner.xml
+++ b/app/src/main/res/layout/dialog_searchable_spinner.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="Select Exercise"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,9 +22,21 @@
             android:id="@+id/edit_search_exercise"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:layout_weight="4.5"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="3"
+            android:background="@android:drawable/editbox_background"
+            android:padding="12dp"
+            android:singleLine="true" />
+
+        <Spinner
+            android:id="@+id/spinner_menu"
+            android:entries="@array/muscle_categories"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1.5"
             android:background="@android:drawable/editbox_background"
             android:padding="12dp"
             android:singleLine="true" />
@@ -51,6 +62,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fontFamily="@font/mlight"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
 </LinearLayout>
